DigicielFull/force-app/main/default/objects/amc__Attendee__c/amc__Attendee__c.object-meta.xml
<CustomObject>
    <description>The Attendee Object is used to identify which Roles will be required at the Meeting.</description>
    <label>Attendee</label>
    <nameField>
        <displayFormat>ATT-{0}</displayFormat>
        <label>Attendee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>