DigicielFull/force-app/main/default/objects/amc__Attendee__c/fields/amc__Apology__c.field-meta.xml
<CustomField>
    <fullName>amc__Apology__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if the Attendee was unable to attend the meeting</inlineHelpText>
    <label>Apology</label>
    <type>Checkbox</type>
</CustomField>