DigicielFull/force-app/main/default/objects/amc__Attendee__c/fields/amc__Attended__c.field-meta.xml
<CustomField>
    <fullName>amc__Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if the Attendee attended the meeting</inlineHelpText>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>