DigicielFull/force-app/main/default/objects/amc__Attendee__c/fields/amc__Meeting__c.field-meta.xml
<CustomField>
    <fullName>amc__Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Meeting that this Attendee will be attending</inlineHelpText>
    <label>Meeting</label>
    <referenceTo>amc__Meeting__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>