DigicielFull/force-app/main/default/objects/amc__Attendee__c/fields/amc__Role__c.field-meta.xml
<CustomField>
    <fullName>amc__Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Role record of the Attendee</description>
    <label>Role</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>