DigicielFull/force-app/main/default/objects/amc__Attendee__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <columns>NAME</columns>
    <columns>amc__Meeting__c</columns>
    <columns>amc__Role__c</columns>
    <columns>amc__Attended__c</columns>
    <columns>amc__Apology__c</columns>
    <columns>amc__Reason_for_Apology__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>